2004-05-22  Matthew Mueller  <donut@dakotacom.net>

	* arch/ogl/gr.c, arch/ogl/ogl.c, include/loadgl.h,
	include/ogl_init.h: add ogl paletted texture support (d1x r1.36,
	r1.38, r1.5, r1.24)

	* 2d/font.c: memset ogl font bitmap data since the copy function
	leaves some (unused) parts uninitialized, which aggravates
	valgrind (d1x r1.14)

	* arch/win32/joyhh.c: fix phantom hat when used with a joystick
	without one, since the code ignored the JOYCAPS_HASPOV flag (d1x
	r1.5)

	* arch/ogl/gr.c: fix possibility of saving incomplete .tga
	screenshots if the entire thing wasn't written in one call to
	write() (d1x r1.35)

	* arch/win32/digi.c: fix persistent sounds (fans, etc) volume/pan
	info not being updated on win32 (d1x r1.11)

	* arch/win32/digi.c: remove some redundancy by not needing to do
	SoundSlots[i].playing = 0; in addition to DS_release_slot.  Also
	clean up some indenting of DS_release_slot calls. And make
	DS_release_slot return 1 when a sound is already not playing, in
	addition to when a sound was killed. (d1x r1.10)

	* arch/linux/joystick.c: fix crash/hang when using -nojoystick in
	linux version (d1x r1.5)

	* main/kconfig.c: make next axis config key skip currently
	allocated axes (d1x r1.11)

2004-05-22  David Cleaver  <wraithx@morpheus.net>

	* main/kconfig.c: joy configuration next axis key from WraithX
	(d1x r1.10)

2004-05-22  Bradley Bell  <btb@icculus.org>

	* main/game.c, main/inferno.c: typo

2004-05-21  Matthew Mueller  <donut@dakotacom.net>

	* main/game.c, main/game.h, main/inferno.c: make rear view
	leave_time variable with -rearviewleavetime argument (d1x r1.25,
	r1.5, r1.27)

2004-05-22  Martin Schaffner  <maschaffner@gmx.ch>

        * main/inferno.c: change -udp documentation to d2x behaviour

2004-05-21  Bradley Bell  <btb@icculus.org>

	* include/gr.h: added missing define for menu fullscreen toggle

2004-05-21  Matthew Mueller  <donut@dakotacom.net>

	* arch/dos/joyc.c, arch/linux/joystick.c: use JOY_NUM_AXES instead